# CSE3PSD-Work

./: README.md
Assignment 2 - Sea Plus Plus/: CMakeLists.txt  Test.cpp  UML 1.drawio
Assignment 2 - Sea Plus Plus/version 1/: App.cpp  App.h  Checker.cpp  Checker.h  Creature.cpp  Creature.h  CreatureFactory.h  InvertebrateChecker.cpp  InvertebrateChecker.h  InvertebrateCreature.cpp  InvertebrateCreature.h  InvertebrateCreatureFactory.cpp  InvertebrateCreatureFactory.h  Main.cpp  SeaPlusPlusEngine.cpp  SeaPlusPlusEngine.h  VertebrateChecker.cpp  VertebrateChecker.h  VertebrateCreature.cpp  VertebrateCreature.h  VertebrateCreatureFactory.cpp  VertebrateCreatureFactory.h
Assinment 1 - Advent of Code Challenges/: 1a.cpp  1b.cpp  2a.cpp  2b.cpp  3a.cpp  3b.cpp  4a.cpp  4b.cpp  5a.cpp  5b.cpp
