cmake_minimum_required(VERSION 3.30)
project(CSE3PSD_Assignment_2)

set(CMAKE_CXX_STANDARD 23)

add_executable(CSE3PSD_Assignment_2
        "version 1/App.cpp"
        "version 1/Checker.cpp"
        "version 1/Creature.cpp"
        "version 1/InvertebrateChecker.cpp"
        "version 1/InvertebrateCreature.cpp"
        "version 1/InvertebrateCreatureFactory.cpp"
        "version 1/Main.cpp"
        "version 1/SeaPlusPlusEngine.cpp"
        "version 1/VertebrateChecker.cpp"
        "version 1/VertebrateCreature.cpp"
        "version 1/VertebrateCreatureFactory.cpp"
)